kustomize/overlays/staging/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  template:
    spec:
      containers:
      - name: redis
        volumeMounts:
        - mountPath: /data
          name: redis-volume-data
      volumes:
      - name: redis-volume-data
        hostPath:
          path: /home/janno/k8s/data/redis/data
          type: Directory
